# oop_exercise_06

./: CMakeLists.txt  allocator.h  list.h  main.cpp  report.doc  square.h  test.cpp  test_01.result  test_01.test  test_02.result  test_02.test  vertex.h
